--- a/templates/footer.html
+++ b/templates/footer.html
@@ -4,6 +4,7 @@
           <ul class="d-flex p-0 align-items-center justify-content-around">
             <li><a href="#Top">Retour en Haut</a></li>          
             <li class="copyright text-muted">Copyright &copy; Aurelien P 2021</li>
+            <li class="copyright text-muted"><a href="https://www.cnil.fr/fr/reglement-europeen-protection-donnees" target="_blank" title="rgpd">Mentions Légales</a></li>
         </ul>
         </nav>
       <!-- Bootstrap core JavaScript -->
