--- a/templates/path_error/403.html
+++ b/templates/path_error/403.html
@@ -24,8 +24,7 @@
       </div>
       <div class="message">
       <h1>403 - Vous ne passerez pas !</h1>
-      <p>Oh oh oh, Gandalf bloque le passage!<br/>Peut-être avez vous fait une faute
-        dans votre url? Ou vous souhaitiez aller à un autre endroit? Comme... Hobbitebourg?
+      <p>Oh oh oh, Gandalf bloque le passage!<br/>Vous n'avez pas le droit de passer à moins d'être un Balrog de Morgoth!
         </p>
       </div>
       <div>
