--- a/templates/admin/card_add.html
+++ b/templates/admin/card_add.html
@@ -2,43 +2,43 @@
 {% import "bootstrap/wtf.html" as wtf %}
 
 <main>
-<h1 class="text-center mt-3"> Ajouter une carte </h1>
-<section class="container mt-5">
-    <form action="{{ url_for('add_page') }}" method='post' enctype="multipart/form-data" autocomplete="off">      
-        {{ form.csrf_token }}
-        <div class="row justify-content-center">
-            {{ wtf.form_field(form.name) }}
-        </div>
-        <div class="d-flex row justify-content-center autocomplete">
-            {{ wtf.form_field(form.edition) }}
-        </div>
-        <div class="row justify-content-center">
-            {{ wtf.form_field(form.creation_date) }}
-        </div>
-        <div class="row justify-content-center">
-            {{ wtf.form_field(form.legality) }}
-        </div>
-        <div class="row justify-content-center">
-            {{ wtf.form_field(form.rarity) }}
-        </div>
-        <div class="row justify-content-center">
-            {{ wtf.form_field(form.price) }}
-        </div>
-        <div class="row justify-content-center">
-            {{ wtf.form_field(form.file) }}
-        </div>
-        <div class="row justify-content-center">
-            {{ wtf.form_field(form.type) }}
-        </div>
-        <div class="row justify-content-center">
-            {{ wtf.form_field(form.ccm) }}
-        </div>
-        <div class="text-center w-50 m-auto mt-3">
-            {{ wtf.form_field(form.submit, horizontal_columns=('lg', 2, 10)) }}
-        </div>
-    </form>
-</section>
-
-
-
-{% include 'footer.html' %}
+    <h1 class="text-center mt-3"> Ajouter une carte </h1>
+    <section class="container mt-5">
+        <form action="{{ url_for('add_page') }}" method='post' enctype="multipart/form-data" autocomplete="off">      
+                {{ form.csrf_token }}
+            <div class="row justify-content-center">
+                {{ wtf.form_field(form.name) }}
+            </div>
+            <div class="d-flex justify-content-center autocomplete">
+                {{ wtf.form_field(form.edition) }}
+            </div>
+            <div class="row justify-content-center">
+                {{ wtf.form_field(form.creation_date) }}
+            </div>
+            <div class="row justify-content-center">
+                {{ wtf.form_field(form.legality) }}
+            </div>
+            <div class="row justify-content-center">
+                {{ wtf.form_field(form.rarity) }}
+            </div>
+            <div class="row justify-content-center">
+                {{ wtf.form_field(form.price) }}
+            </div>
+            <div class="row justify-content-center">
+                {{ wtf.form_field(form.file) }}
+            </div>
+            <div class="row justify-content-center">
+                {{ wtf.form_field(form.type) }}
+            </div>
+            <div class="row justify-content-center">
+                {{ wtf.form_field(form.ccm) }}
+            </div>
+            <div class="text-center w-50 m-auto mt-3">
+                {{ wtf.form_field(form.submit) }}
+            </div>
+        </form>
+    </section>
+</main>
+<div>
+    {% include 'footer.html' %}
+</div>
