--- a/templates/connection/forgotten_password.html
+++ b/templates/connection/forgotten_password.html
@@ -2,13 +2,13 @@
 
 <main>
   <section class="container">
-    <h1> Mot de passe oublié? </h1>
-    <form action="{{url_for('forgotten_password_page') }}" method="post" class="text-center w-80 ms-auto">
-      <div class="d-flex align-items-center w-50 ms-auto">
+    <h1 class="text-center"> Mot de passe oublié? </h1>
+    <form action="{{url_for('forgotten_password_page') }}" method="post" class="text-center w-100">
+      <div class="d-flex align-items-center">
         <label class="m-3" for="input-user">Entrez votre nom d'utilisateur ou mot de passe ici :</label>
-        <input class="m-3 w-25" id="input-user" name="input-user" type="text" placeholder="Ecrivez ici...">  
+        <input class="m-3" id="input-user" name="input-user" type="text" placeholder="Ecrivez ici...">  
+        <input class="" type="submit" value="Renvoyer password">
       </div>
-      <input class="m-3 w-25 ms-auto" type="submit" value="Renvoyer password">
     </form>
   </section> 
   
