--- a/templates/connection/register.html
+++ b/templates/connection/register.html
@@ -8,7 +8,7 @@
 
     <h1 class="text-center mt-3">Créer un compte</h1>
     <section class="container mt-5"> 
-        <form action="{{ url_for('login_page') }}" method='post'>      
+        <form action="{{ url_for('register_page') }}" method='post'>      
             {{ form.csrf_token }}
             <div class="row justify-content-center mt-3">
                 {{ wtf.form_field(form.user) }}
