--- a/templates/header.html
+++ b/templates/header.html
@@ -10,7 +10,7 @@
           <img class="resp" src="{{url_for('static', filename='img/logo-rec.png')}}" alt="logo de MagicBay" title="MagicBay"></a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" id="bugger-nav">
           <span class="navbar-toggler-icon"></span>
         </button>
         <h4 class="w-25 nav-title">MagicBay 
