--- a/templates/user/deckbuilder/_research_sell_list.html
+++ b/templates/user/deckbuilder/_research_sell_list.html
@@ -8,11 +8,11 @@
 
           <form class="col-2" action="{{ url_for('delete_list') }}" method='post'>
             <input type="text" hidden value="{{id[1].id}}" name="delete-id">
-            <input onclick="return confirm('Supprimer cette liste?')" type="submit" value="Delete">
+            <input onclick="return confirm('Supprimer cette liste?')" type="submit" value="Supprimer">
           </form>
       </div>
       <div class="collapse {{ 'w-50' if  sell_lists[0][1].id_type != 2 else 'w-100' }} justify-content-center align-items-center" id="list-{{ id[1].id }}">
-        <table class=''>
+        <table>
           <thead>
               <tr>
                   <th >Nom de la carte</th>
@@ -41,8 +41,8 @@
                       <td>{{ list[4].language.capitalize() }}</td>
                       <td>{{ list[4].price }}€</td>
                       <td> 
-                        <form class="" action="{{ url_for('delete_sell_card_list') }}" method='post'>   
-                          <input class="pointer" name="add-submit-list" type="submit" value="delete">  
+                        <form class="" action="{{ url_for('delete_sell_card_list', card=list[3].name) }}" method='post'>   
+                          <input class="pointer" name="add-submit-list" type="submit" value="Supprimer">  
                           <input type="text" hidden name='card-id' value='{{ list[3].id }}'>
                           <input type="text" hidden name='deck-id' value='{{ list[2].id_deckbuilder }}'>
                         </form>
